# stored_management

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  test.db  test.py
alembic/: env.py
alembic/versions/: 068f86bb8fb8_add_email_table.py  166995855332_add_cost_to_adjustment_table.py  45e5361c6aa6_add_data_to_groups.py  46078c99f53b_change_schema_definition.py  4a60ac9d815d_convert_supplier_name_to_supplier_id.py  535bff041ea5_add_purchase_order_details.py  5da1705e0265_add_groups_to_staff.py  7a2af8d96d8e_add_category_id.py  81bf6867e90c_add_tables.py  82749e71926c_add_tables.py  8c3aa1b58f6d_add_cancelled_to_stock.py  9236bc8a57ad_remove_cost_table.py  95f600a625ff_add_cancel_feature_and_stock_id_to_.py  a228729d0f42_change_schema_definition.py  a2ec792d1fb5_add_cost_to_stock_out.py  bdaed69c3df2_add_total_cost.py  d38a422a0c21_add_quantity_initiated.py  (+6 more)
config/: setting.py
controllers/: auth.py  operations.py  order.py  purchase_order.py  report.py  stock.py  stock_adjustment.py  stock_out.py  stock_running.py
core/: setup.py
cron/: __init__.py  config.py  task.py
error/: __init__.py
handlers/: __init__.py
models/: barcode.py  category.py  cost.py  department.py  email.py  evaluation.py  groups.py  job.py  order.py  payment_terms.py  purchase_order.py  purchase_order_items.py  purchase_order_type.py  roles.py  staff.py  stock.py  stock_adjustment.py  stock_out.py  stock_running.py  suppliers.py
parser/: report.py
schemas/: error.py  operations.py  order.py  purchase_order.py  report.py  staff.py  stock.py
script/: startup.sh
templates/: email.html
utils/: common.py  countFilter.py  email.py  enum.py  filter_sort.py  generate.py  redis.py  session.py
(+8 files in other folders)
